--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
+    "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "lucide-react": "^0.555.0",
-    "recharts": "^3.5.0",
-    "buffer": "^6.0.3",
-    "crypto": "^1.0.1"
+    "react-is": "^19.2.0",
+    "recharts": "^3.5.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
